--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
     "name": "cse340-practice-Zobrist",
     "dependencies": {
+        "ejs": "^3.1.10",
         "express": "^5.1.0"
     },
     "type": "module",
     "scripts": {
-      "dev": "nodemon --env-file=.env server.js",
+        "dev": "nodemon --env-file=.env server.js",
         "start": "node --env-file=.env server.js"
     },
     "devDependencies": {
